--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header ,img{
 
 @media screen and (min-width: 1440px){
     body{
-background-image:url("../images/bg-desktop.svg");
+background-image:url("images/bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
     }
