--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-background-image:url("images/bg-mobile.svg");
+background-image:url("bg-mobile.svg");
 background-repeat:no-repeat;
 background-size:contain;
     }
@@ -26,7 +26,7 @@ header ,img{
 
 @media screen and (min-width: 1440px){
     body{
-background-image:url("images/bg-desktop.svg");
+background-image:url("bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
     }
