--- a/style.css
+++ b/style.css
@@ -29,5 +29,6 @@ header ,img{
 background-image:url("bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
+        background-color:var(--primary-violet);
     }
 }
