--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --heading-font: "Open Sans";
 }
 
+    
 body{
 background-image:url("bg-mobile.svg");
 background-repeat:no-repeat;
@@ -29,6 +30,9 @@ header ,img{
 background-image:url("bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
+        
+    }
+    html{
         background-color:var(--primary-violet);
     }
 }
