--- a/style.css
+++ b/style.css
@@ -1,114 +1,47 @@
-:root{
-    /*Colours*/
-    --primary-green: hsl(171, 66%, 44%);
-    --primary-blue: hsl(233, 100%, 69%);
-    --neutral-gray-700: hsl(210, 10%, 33%);
-    --neutral-gray-500:hsl(201, 11%, 66%);
+--root{
+    --primary-violet: hsl(257, 40%, 49%);
+    --primary-soft-magenta: hsl(300, 69%, 71%);
 
-    /*Fonts*/
-    --font-size:18px;
-
-    --font-family:"Bai Jamjuree";
-    --font-weight-400:400;
-    --font-weight-600:600;
+    --body-font: "Poppins";
+    --heading-font: "Open Sans";
 }
 body{
-    font-size: var(--font-size);
-    font-family: var(--font-family);
+	color:white;
 }
-header{
-    background:url('images/bg-header-mobile.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+body{
+background-color: hsl(257, 40%, 49%) ;	
+background-image:url("../images/bg-mobile.svg");
+background-repeat:no-repeat;
+background-size:contain;
+    }
 .display-1{
-    font-size: 30px;
-    font-weight: var(--font-weight-600);
-    font-family: var(--font-family);
+    font-family: var(--heading-font);
+    font-weight:400;
+	color:white;
 }
- button{
-    color:white;
-
-}
-button:first-child{
-  background-color: var(--primary-blue);
-
-}
- button:last-child{
-     background-color: var(--primary-green);
-
-
+header ,img{
+    fill:black !important;
 }
 
-
-footer {
-    background-color: var(--neutral-gray-500);
-}
-footer li{
-    list-style:none;
-    
-}
-footer  a:link{
-    color: var(--neutral-gray-700);
-}
-footer  a img{
-fill:white;
-}
-
-@media screen and (min-width: 23.4375em){
-.second{
-    max-width:300px;
-    text-align:center;
-}
-.logo-icon, section{
-    margin-bottom:20px;
-}
-button{
-    margin-bottom:10px;
-}
-.socials a{
-  margin:0 10px 0 10px;
- 
-}
-.socials {
-     display:flex;
- flex-direction:row;
-  justify-content:center;
-  align-items:center;
-}
-.hero-btn{
-align-items:center;
-}
-.hero-btn button {
-    width: 100%;
-    max-width: 300px;
-    margin: 5px 0 !important;
+ .register-btn{
+    color: hsl(257, 40%, 49%) !important ;
+    background-color: white !important;
 	
 }
-
+footer img{
+    fil:white !important;
+	outline:white !important;
 }
+.icon{
+	filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+
 @media screen and (min-width: 90em){
-    header{
-background:url('images/bg-header-desktop.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    body{
+	background-color: hsl(257, 40%, 49%) !important;	
+background:url("../images/bg-desktop.svg");
+background-repeat:no-repeat;
+background-size:contain;
+
     }
-    .second{
-    max-width:350px;
-    text-align:justify;
-    
-}
-.first{
-  max-width:600px;
-    text-align:justify;
-}
-.nav-item{
-   max-width:300px;
-}
-.socials a{
-  margin:0 10px 0 10px;
-}
-
-
-    
 }
