--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
---root{
+:root{
     --primary-violet: hsl(257, 40%, 49%);
     --primary-soft-magenta: hsl(300, 69%, 71%);
 
@@ -9,8 +9,8 @@ body{
 	color:white;
 }
 body{
-background-color: hsl(257, 40%, 49%) ;	
-background-image:url("../images/bg-mobile.svg");
+background-color: var(--primary-violet) ;	
+background-image:url("bg-mobile.svg");
 background-repeat:no-repeat;
 background-size:contain;
     }
@@ -20,17 +20,17 @@ background-size:contain;
 	color:white;
 }
 header ,img{
-    fill:black !important;
+    fill:black ;
 }
 
  .register-btn{
-    color: hsl(257, 40%, 49%) !important ;
-    background-color: white !important;
+    color: var(--primary-violet) ;
+    background-color: white ;
 	
 }
 footer img{
-    fil:white !important;
-	outline:white !important;
+    fil:white ;
+	outline:white ;
 }
 .icon{
 	filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
@@ -38,7 +38,7 @@ footer img{
 
 @media screen and (min-width: 90em){
     body{
-	background-color: hsl(257, 40%, 49%) !important;	
+	background-color: var(--primary-violet) ;	
 background:url("../images/bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
