--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ footer img{
 @media screen and (min-width: 90em){
     body{
 	background-color: var(--primary-violet) ;	
-background:url("../images/bg-desktop.svg");
+background:url("bg-desktop.svg");
 background-repeat:no-repeat;
 background-size:contain;
 
